src/objects/Critical_Goals__c.object
<CustomObject>
    <description>Object used to store the goals and Lead, LAG metrics per country and per franchise.
Also this may be used to store temporary metrics needed by a country like  a product lunch or a need to have a detailed metric on a specific product for a defined period of time (if not acchivable thru standard reporting from existing functionalities)</description>
    <fields>
        <fullName>BST_ACTIVE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to identify whether record is active or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BST_BAX_SALES_TEAM__c</fullName>
        <description>BST - field used to track the Main Product Category.</description>
        <label>Main Product Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BST_COUNTRY__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Bax Company/Services</fullName>
                </value>
                <value>
                    <fullName>HC - Anesthesia/Critical Care</fullName>
                </value>
                <value>
                    <fullName>HC - BioSurgery</fullName>
                </value>
                <value>
                    <fullName>HC - Glob.Pharma Injectables</fullName>
                </value>
                <value>
                    <fullName>HC - Infusion Systems</fullName>
                </value>
                <value>
                    <fullName>HC - IV Therapies/SVP</fullName>
                </value>
                <value>
                    <fullName>HC - Nutrition</fullName>
                </value>
                <value>
                    <fullName>HC - Pharmacy Services</fullName>
                </value>
                <value>
                    <fullName>RE - Acute</fullName>
                </value>
                <value>
                    <fullName>RE - Hemo Dialysis</fullName>
                </value>
                <value>
                    <fullName>RE - Peritoneal Dialysis</fullName>
                </value>
                <value>
                    <fullName>RE - Water Treatment</fullName>
                </value>
                <value>
                    <fullName>HC - Nutrition Pediatrics</fullName>
                </value>
                <value>
                    <fullName>IFL Infusion Systems</fullName>
                </value>
                <value>
                    <fullName>IFL Global Pharma Injectables</fullName>
                </value>
                <value>
                    <fullName>Small Volume Parenterals</fullName>
                </value>
                <value>
                    <fullName>HC - Productivity Sys</fullName>
                    <isActive>false</isActive>
                    <label>HC - Productivity Sys</label>
                </value>
                <value>
                    <fullName>MSL/Medical</fullName>
                    <isActive>false</isActive>
                    <label>MSL/Medical</label>
                </value>
                <value>
                    <fullName>Market Access</fullName>
                    <isActive>false</isActive>
                    <label>Market Access</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_Baxter_Goal_P1__c</fullName>
        <defaultValue>1</defaultValue>
        <description>BST - This field is used for analytics</description>
        <label>Baxter Goal P1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_COUNTRY__c</fullName>
        <description>Field to track the country.</description>
        <label>Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_DETAILS__c</fullName>
        <description>BST - this field will allow to store the details about the strategic goal or the Lead Metrics</description>
        <inlineHelpText>BST - this field will allow to store the details about the strategic goal or the Lead Metrics</inlineHelpText>
        <label>Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BST_END_DATE__c</fullName>
        <description>End Date of the Goal</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BST_PARENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>BST - this field allows the association of a child to parent. In this case a lead metric to be associated with a Critical Goal</description>
        <inlineHelpText>BST - this field allows the association of a child to parent. In this case a lead metric to be associated with a Critical Goal</inlineHelpText>
        <label>Parent</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Critical_Goals__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Strategic Goal</value>
            </filterItems>
            <filterItems>
                <field>$Source.BST_COUNTRY__c</field>
                <operation>equals</operation>
                <valueField>Critical_Goals__c.BST_COUNTRY__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Critical_Goals__c</referenceTo>
        <relationshipLabel>Baxter Goals</relationshipLabel>
        <relationshipName>Critical_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BST_RELATED_TO__c</fullName>
        <description>Stores details-whether goals related to Events or Opportunities.</description>
        <label>Related To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Opportunities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_START_DATE__c</fullName>
        <description>Start Date of the Goal.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Baxter Goal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BST_ACTIVE__c</columns>
        <columns>BST_COUNTRY__c</columns>
        <columns>BST_DETAILS__c</columns>
        <columns>BST_BAX_SALES_TEAM__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>BST_RELATED_TO__c</columns>
        <columns>BST_START_DATE__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BG-{00000}</displayFormat>
        <label>BOOST Baxter Goal ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Baxter Goals</pluralLabel>
    <recordTypes>
        <fullName>BST_Goal_Metrics</fullName>
        <active>true</active>
        <description>BST - this record type is used to define the Lead/Lag metrics associated with a Critical Goal</description>
        <label>Goal Metrics</label>
    </recordTypes>
    <recordTypes>
        <fullName>BST_Strategic_Goal</fullName>
        <active>true</active>
        <description>BST - this object will store the strategic goals for a specific country and franchise</description>
        <label>Strategic Goal</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>BST_GOAL_End_Date_Greather_Start_Date</fullName>
        <active>true</active>
        <description>BST - this rule will ensure that End Date is greater than the Start Date</description>
        <errorConditionFormula>AND(OR(RecordType.DeveloperName=&quot;BST_Goal_Metrics&quot;,RecordType.DeveloperName=&quot;BST_Strategic_Goal&quot;), BST_START_DATE__c &gt;=  BST_END_DATE__c)</errorConditionFormula>
        <errorDisplayField>BST_END_DATE__c</errorDisplayField>
        <errorMessage>End Date Needs to be greater then the Start Date in order to save the record</errorMessage>
    </validationRules>
</CustomObject>